force-app/main/default/objects/TaxRate__c/TaxRate__c.object-meta.xml
<CustomObject>
    <description>Taux de TVA configurable par les administrateurs.</description>
    <label>Taux de TVA</label>
    <nameField>
        <label>Libellé</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Taux de TVA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>