force-app/main/default/objects/TaxRate__c/fields/IsActive__c.field-meta.xml
<CustomField><fullName>IsActive__c</fullName><defaultValue>true</defaultValue><label>Actif</label><type>Checkbox</type></CustomField>