force-app/main/default/objects/TaxRate__c/fields/IsDefault__c.field-meta.xml
<CustomField><fullName>IsDefault__c</fullName><defaultValue>false</defaultValue><label>Par défaut</label><type>Checkbox</type></CustomField>