force-app/main/default/objects/TaxRate__c/fields/LegalMention__c.field-meta.xml
<CustomField><fullName>LegalMention__c</fullName><label>Mention légale</label><length>255</length><required>false</required><type>Text</type></CustomField>