force-app/main/default/objects/TaxRate__c/fields/Rate__c.field-meta.xml
<CustomField><fullName>Rate__c</fullName><label>Taux</label><precision>5</precision><required>true</required><scale>2</scale><type>Percent</type></CustomField>